Launchpad IVOs Projects box shadow

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <header class="container">
-        <div class="header-section">
+    <header class="container ">
+        <div class="header-section menu">
             <div >
                 <img src="./assest/images/dottllogo.png" class="dottllogo" />
             </div> |
@@ -28,9 +28,6 @@
                     <span class="walletconnect"> 0xaf....D8f8 </span>
                     <img src="./assest/images/authprofile.png" class="profile-logo"/>
                 </div>
-                <!-- <div class="transactioncount">
-                
-            </div> -->
                 <div class="notificationcount text-white">3</div>
             </button>
         </div>
@@ -794,7 +791,7 @@
     <footer class="container">
         <div class="footer-bar">
             <div>
-                <img src="./assest/images/dottllogo.png" />
+                <img src="./assest/images/dottllogo.png" id="#menu"/>
                 <p>OTT typically refers to the delivery of
                     <br />media content over the internet
                     <br />without the involvement of traditional
@@ -833,7 +830,7 @@
                     TALK TO US
                 </h4>
                 <p>contact@yellowblock.net</p>
-                <p>Ph:+91 8390150032</p>
+                <p>Ph: +91 8390150032</p>
             </div>
             <div>
                 <h4>
@@ -842,7 +839,7 @@
                 <div class="paly-store">
                     <div>
                         <div class="store-title">
-                            <span class="icons gpaly-icon"></span>
+                            <a href="https://play.google.com/store/games?hl=en_IN&gl=US"><span class="icons gpaly-icon"></span></a>
                             <div>
                                 <p>GET IT ON</p>
                                 <p>Google Play</p>
@@ -853,7 +850,7 @@
                     </div>
                     <div>
                         <div class="store-title">
-                            <span class="icons apaly-icon"></span>
+                            <a href="https://www.apple.com/in/app-store/"><span class="icons apaly-icon"></span></a>
                             <div>
                                 <p>Download on the</p>
                                 <p>Apple Store</p>
